--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "nuxt": "^1.0.0-rc11"
+    "axios": "^0.17.1",
+    "nuxt": "^1.0.0-rc11",
+    "vuetify": "^0.17.5"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
@@ -24,6 +26,8 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "eslint-plugin-standard": "^3.0.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1"
   }
 }
